fix small size image with white space.

--- a/less/style.less
+++ b/less/style.less
@@ -17,6 +17,10 @@ body {
 	font-size: 13px;
 }
 
+.page {
+	max-width: 1920px;
+	margin: 0 auto;
+}
 // ----------------------------------------
 // ! header area
 // ----------------------------------------
@@ -281,6 +285,7 @@ footer {
 .custom-post-type {
 	background: url(images/20140512165237HBUvCo.jpg) no-repeat;
 	padding-top: 326px;
+	background-size: cover;
 }
 
 // ----------------------------------------
